WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272214
Some text fails to translate to Simplified Chinese on Apple TV+ page
https://bugs.webkit.org/show_bug.cgi?id=272214
Summary
Some text fails to translate to Simplified Chinese on Apple TV+ page
Ryosuke Niwa
Reported
2024-04-04 23:32:10 PDT
Some English text on Apple TV+ page doesn't translate to Simplified Chinese. <
rdar://72939899
>
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-04-04 23:43:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26891
EWS
Comment 2
2024-04-05 20:36:41 PDT
Committed
277150@main
(f5c2130755ab): <
https://commits.webkit.org/277150@main
> Reviewed commits have been landed. Closing PR #26891 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug